--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="hero" class="hero-section">
         <div class="hero-text">
             <h1>Sampuran Matharu</h1>
-            <p>3D Artist & Game Designer</p>
+            <p>3D Artist</p>
         </div>
         <div class="purple-blur grainy-texture"></div>
     </section>
